feat: add slides and run notebooks

--- a/cell-cell_communication/ismb-eccb-2025-tutorial-vt3/notebooks/jupyter/additional/single_condition/CellChat.ipynb
+++ b/cell-cell_communication/ismb-eccb-2025-tutorial-vt3/notebooks/jupyter/additional/single_condition/CellChat.ipynb
@@ -38,14 +38,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "faaf4a0d-ef62-4a5f-8a87-089f23306f12",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: dplyr\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "Loading required package: igraph\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘igraph’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    as_data_frame, groups, union\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "    union\n",
+      "\n",
+      "\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Attaching SeuratObject\n",
+      "\n",
+      "‘SeuratObject’ was built under R 4.3.0 but the current version is\n",
+      "4.3.1; it is recomended that you reinstall ‘SeuratObject’ as the ABI\n",
+      "for R may have changed\n",
+      "\n",
+      "Seurat v4 was just loaded with SeuratObject v5; disabling v5 assays and\n",
+      "validation routines, and ensuring assays work in strict v3/v4\n",
+      "compatibility mode\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(CellChat)\n",
     "library(patchwork)\n",
@@ -76,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00eafa2e-3dd1-4c72-88a8-04ec1a413e4a",
    "metadata": {
     "vscode": {
@@ -85,7 +141,7 @@
    },
    "outputs": [],
    "source": [
-    "seurat_object <- readRDS(\"/Tutorial_ISMBECCB2025/data_vt3/first/2306scRNAseq_HMI_Ischemic.rds\")\n",
+    "seurat_object <- readRDS(\"../../../../data_vt3/first/2306scRNAseq_HMI_Ischemic.rds\")\n",
     "\n",
     "gene_expr <- seurat_object[[\"RNA\"]]@data # normalized data matrix"
    ]
@@ -101,14 +157,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f3fda291",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>labels</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>AAACCCAAGTATGCAA-1_2_1_1_1_1_1_1_1</th><td>Fib</td></tr>\n",
+       "\t<tr><th scope=row>AAACCCACAGAGAAAG-1_2_1_1_1_1_1_1_1</th><td>Fib</td></tr>\n",
+       "\t<tr><th scope=row>AAACCCAGTCTTCCGT-1_2_1_1_1_1_1_1_1</th><td>Fib</td></tr>\n",
+       "\t<tr><th scope=row>AAACCCATCAAGGCTT-1_2_1_1_1_1_1_1_1</th><td>Fib</td></tr>\n",
+       "\t<tr><th scope=row>AAACGAAAGCTGTGCC-1_2_1_1_1_1_1_1_1</th><td>PC </td></tr>\n",
+       "\t<tr><th scope=row>AAACGAACAGGTCCCA-1_2_1_1_1_1_1_1_1</th><td>Fib</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 1\n",
+       "\\begin{tabular}{r|l}\n",
+       "  & labels\\\\\n",
+       "  & <chr>\\\\\n",
+       "\\hline\n",
+       "\tAAACCCAAGTATGCAA-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & Fib\\\\\n",
+       "\tAAACCCACAGAGAAAG-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & Fib\\\\\n",
+       "\tAAACCCAGTCTTCCGT-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & Fib\\\\\n",
+       "\tAAACCCATCAAGGCTT-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & Fib\\\\\n",
+       "\tAAACGAAAGCTGTGCC-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & PC \\\\\n",
+       "\tAAACGAACAGGTCCCA-1\\_2\\_1\\_1\\_1\\_1\\_1\\_1\\_1 & Fib\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 1\n",
+       "\n",
+       "| <!--/--> | labels &lt;chr&gt; |\n",
+       "|---|---|\n",
+       "| AAACCCAAGTATGCAA-1_2_1_1_1_1_1_1_1 | Fib |\n",
+       "| AAACCCACAGAGAAAG-1_2_1_1_1_1_1_1_1 | Fib |\n",
+       "| AAACCCAGTCTTCCGT-1_2_1_1_1_1_1_1_1 | Fib |\n",
+       "| AAACCCATCAAGGCTT-1_2_1_1_1_1_1_1_1 | Fib |\n",
+       "| AAACGAAAGCTGTGCC-1_2_1_1_1_1_1_1_1 | PC  |\n",
+       "| AAACGAACAGGTCCCA-1_2_1_1_1_1_1_1_1 | Fib |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                                   labels\n",
+       "AAACCCAAGTATGCAA-1_2_1_1_1_1_1_1_1 Fib   \n",
+       "AAACCCACAGAGAAAG-1_2_1_1_1_1_1_1_1 Fib   \n",
+       "AAACCCAGTCTTCCGT-1_2_1_1_1_1_1_1_1 Fib   \n",
+       "AAACCCATCAAGGCTT-1_2_1_1_1_1_1_1_1 Fib   \n",
+       "AAACGAAAGCTGTGCC-1_2_1_1_1_1_1_1_1 PC    \n",
+       "AAACGAACAGGTCCCA-1_2_1_1_1_1_1_1_1 Fib   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cell_metadata <- data.frame(labels = seurat_object@meta.data$cell_type, row.names = row.names(seurat_object@meta.data)) # cell metadata\n",
     "head(cell_metadata)"
@@ -116,14 +233,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d9f7b417-11ff-4e3f-b5be-3d4cb8c85eab",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 5668991</td><td>302.8</td><td>  8833537</td><td>471.8</td><td> 8450899</td><td>451.4</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>38713435</td><td>295.4</td><td>118328399</td><td>902.8</td><td>98491020</td><td>751.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  5668991 & 302.8 &   8833537 & 471.8 &  8450899 & 451.4\\\\\n",
+       "\tVcells & 38713435 & 295.4 & 118328399 & 902.8 & 98491020 & 751.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  5668991 | 302.8 |   8833537 | 471.8 |  8450899 | 451.4 |\n",
+       "| Vcells | 38713435 | 295.4 | 118328399 | 902.8 | 98491020 | 751.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used     (Mb)  gc trigger (Mb)  max used (Mb) \n",
+       "Ncells  5668991 302.8   8833537  471.8  8450899 451.4\n",
+       "Vcells 38713435 295.4 118328399  902.8 98491020 751.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# save space\n",
     "rm(seurat_object)\n",
@@ -141,14 +301,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "65030376-0aeb-4e24-acfa-a78e1426e06d",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Create a CellChat object from a data matrix\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in createCellChat(object = gene_expr, meta = cell_metadata, group.by = \"labels\"):\n",
+      "“The 'meta' data does not have a column named `samples`. We now add this column and all cells are assumed to belong to `sample1`! \n",
+      "”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set cell identities for the new CellChat object \n",
+      "The cell groups used for CellChat analysis are  Adipo, CM, Endo, Fib, Lymphoid, Mast, Myeloid, PC, vSMCs \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "An object of class CellChat created from a single dataset \n",
+       " 27416 genes.\n",
+       " 14961 cells. \n",
+       "CellChat analysis of single cell RNA-seq data! "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cellchat <- createCellChat(object = gene_expr,            # a normalized data matrix\n",
     "                           meta = cell_metadata,          # a data frame (rows are cells with rownames) consisting of cell information,\n",
@@ -174,14 +371,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cbb167ca-77be-44f8-9277-0276a2437d71",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 3,233\n",
+      "Columns: 28\n",
+      "$ interaction_name         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFB1_TGFBR1_TGFBR2\", \"TGFB2_TGFBR1_TGFBR2\",…\n",
+      "$ pathway_name             \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFb\", \"TGFb\", \"TGFb\", \"TGFb\", \"TGFb\", \"TGFb…\n",
+      "$ ligand                   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFB1\", \"TGFB2\", \"TGFB3\", \"TGFB1\", \"TGFB1\", …\n",
+      "$ receptor                 \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFbR1_R2\", \"TGFbR1_R2\", \"TGFbR1_R2\", \"ACVR1…\n",
+      "$ agonist                  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFb agonist\", \"TGFb agonist\", \"TGFb agonist…\n",
+      "$ antagonist               \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFb antagonist\", \"TGFb antagonist\", \"TGFb a…\n",
+      "$ co_A_receptor            \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"…\n",
+      "$ co_I_receptor            \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFb inhibition receptor\", \"TGFb inhibition …\n",
+      "$ annotation               \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Secreted Signaling\", \"Secreted Signaling\", \"…\n",
+      "$ interaction_name_2       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFB1 - (TGFBR1+TGFBR2)\", \"TGFB2 - (TGFBR1+T…\n",
+      "$ evidence                 \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"KEGG: hsa04350\", \"KEGG: hsa04350\", \"KEGG: hs…\n",
+      "$ is_neurotransmitter      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"FALSE\", \"FALSE\", \"FALSE\", \"FALSE\", \"FALSE\", …\n",
+      "$ ligand.symbol            \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFB1\", \"TGFB2\", \"TGFB3\", \"TGFB1\", \"TGFB1\", …\n",
+      "$ ligand.family            \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGF-beta\", \"TGF-beta\", \"TGF-beta\", \"TGF-beta…\n",
+      "$ ligand.location          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Extracellular matrix, Secreted, Extracellula…\n",
+      "$ ligand.keyword           \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Disease variant, Signal, Reference proteome,…\n",
+      "$ ligand.secreted_type     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"growth factor\", \"growth factor\", \"cytokine;g…\n",
+      "$ ligand.transmembrane     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"FALSE\", \"FALSE\", \"TRUE\", \"FALSE\", \"FALSE\", \"…\n",
+      "$ receptor.symbol          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TGFBR2, TGFBR1\", \"TGFBR2, TGFBR1\", \"TGFBR2, …\n",
+      "$ receptor.family          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Protein kinase superfamily, TKL Ser/Thr prot…\n",
+      "$ receptor.location        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Cell membrane, Secreted, Membrane raft, Cell…\n",
+      "$ receptor.keyword         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Membrane, Secreted, Disulfide bond, Kinase, …\n",
+      "$ receptor.surfaceome_main \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Receptors\", \"Receptors\", \"Receptors\", \"Recep…\n",
+      "$ receptor.surfaceome_sub  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Act.TGFB;Kinase\", \"Act.TGFB;Kinase\", \"Act.TG…\n",
+      "$ receptor.adhesome        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"…\n",
+      "$ receptor.secreted_type   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"\", \"…\n",
+      "$ receptor.transmembrane   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"TRUE\", \"TRUE\", \"TRUE\", \"TRUE\", \"TRUE\", \"TRUE…\n",
+      "$ version                  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"CellChatDB v1\", \"CellChatDB v1\", \"CellChatDB…\n"
+     ]
+    }
+   ],
    "source": [
     "CellChatDB <- CellChatDB.human\n",
     "\n",
@@ -191,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fbdc0aab-610b-493e-89c9-55783df62fa3",
    "metadata": {
     "vscode": {
@@ -255,13 +489,23 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of highly variable ligand-receptor pairs used for signaling inference is 1326 \n",
+      "triMean is used for calculating the average gene expression per cell group. \n",
+      "[1] \">>> Run CellChat on sc/snRNA-seq data <<< [2025-07-15 10:04:00.465005]\"\n"
+     ]
+    }
+   ],
    "source": [
     "# subset the expression data of signaling genes for saving computation cost\n",
     "cellchat <- subsetData(cellchat) \n",
     "\n",
     "# set parallelism\n",
-    "future::plan(\"multisession\", workers = 4)\n",
+    "future::plan(\"multisession\", workers = 10)\n",
     "options(future.globals.maxSize= 800*1024^2)\n",
     "\n",
     "# identify overexpressed genes and ligand-receptor pairs\n",
