feat: add code annotations

--- a/AI Large Cellular Models/hands-on-1.ipynb
+++ b/AI Large Cellular Models/hands-on-1.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-23T12:03:38.234080Z",
@@ -83,24 +83,25 @@
    },
    "outputs": [],
    "source": [
-    "class MLP(nn.Module):\n",
+    "class MLP(nn.Module):  # Define a class MLP that inherits from torch.nn.Module\n",
     "    # A simple MLP example\n",
-    "    def __init__(self, d_input, d_hidden, d_output):\n",
-    "        super(MLP, self).__init__()\n",
-    "        self.linear1 = nn.Linear(d_input, d_hidden)\n",
-    "        self.activation = nn.ReLU()\n",
-    "        self.linear2 = nn.Linear(d_hidden, d_output)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        x = self.linear1(x)\n",
-    "        x = self.activation(x)\n",
-    "        x = self.linear2(x)\n",
-    "        return x"
+    "    def __init__(self, d_input, d_hidden, d_output):  # Constructor with input, hidden, and output dimensions\n",
+    "        super(MLP, self).__init__()  # Initialize the parent nn.Module class\n",
+    "        self.linear1 = nn.Linear(d_input, d_hidden)  # First linear layer: input to hidden\n",
+    "        self.activation = nn.ReLU()  # ReLU activation function\n",
+    "        self.linear2 = nn.Linear(d_hidden, d_output)  # Second linear layer: hidden to output\n",
+    "\n",
+    "    def forward(self, x):  # Forward pass method\n",
+    "        x = self.linear1(x)  # Pass input through first linear layer\n",
+    "        x = self.activation(x)  # Apply ReLU activation\n",
+    "        x = self.linear2(x)  # Pass through second linear layer\n",
+    "        return x  # Return the output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-23T12:03:41.221347Z",
@@ -125,13 +126,13 @@
     }
    ],
    "source": [
-    "mlp = MLP(d_input=128, d_hidden=64, d_output=2)\n",
-    "print(mlp)"
+    "mlp = MLP(d_input=128, d_hidden=64, d_output=2)  # Create an instance of the MLP class with input size 128, hidden size 64, and output size 2\n",
+    "print(mlp)  # Print the architecture and parameters of the MLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-18T08:58:33.173222Z",
@@ -144,18 +145,18 @@
    },
    "outputs": [],
    "source": [
-    "class TransformerEncoderLayer(nn.Module):\n",
+    "class TransformerEncoderLayer(nn.Module):  # Define a class inheriting from nn.Module for a Transformer encoder layer\n",
     "    # TransformerEncoderLayer is made up of self-attn and feed forward (defined below)\n",
-    "    def __init__(self, size, self_attn, feed_forward, dropout):\n",
-    "        super(TransformerEncoderLayer, self).__init__()\n",
-    "        self.self_attn = self_attn\n",
-    "        self.feed_forward = feed_forward  # Here is an instance of the FFN\n",
-    "        self.res_layers = clones(ResConnection(size, dropout), 2)\n",
-    "        self.size = size\n",
+    "    def __init__(self, size, self_attn, feed_forward, dropout):  # Constructor takes layer size, self-attention, feed-forward, and dropout\n",
+    "        super(TransformerEncoderLayer, self).__init__()  # Initialize the parent nn.Module\n",
+    "        self.self_attn = self_attn  # Store the self-attention module\n",
+    "        self.feed_forward = feed_forward  # Store the feed-forward network (FFN)\n",
+    "        self.res_layers = clones(ResConnection(size, dropout), 2)  # Create two residual connection layers\n",
+    "        self.size = size  # Store the layer size\n",
     "\n",
-    "    def forward(self, x, mask):\n",
-    "        x = self.res_layers[0](x, lambda x: self.self_attn(x, x, x, mask))\n",
-    "        return self.res_layers[1](x, self.feed_forward)"
+    "    def forward(self, x, mask):  # Forward pass: x is input, mask is attention mask\n",
+    "        x = self.res_layers[0](x, lambda x: self.self_attn(x, x, x, mask))  # Apply first residual connection with self-attention\n",
+    "        return self.res_layers[1](x, self.feed_forward)  # Apply second residual connection with feed-forward"
    ]
   },
   {
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-18T08:59:01.953872Z",
@@ -229,74 +230,71 @@
    "outputs": [],
    "source": [
     "# vocabulary for input sequence\n",
-    "words_x = '<PAD>,1,2,3,4,5,6,7,8,9,0,<SOS>,<EOS>,+'\n",
-    "vocab_x = {word: i for i, word in enumerate(words_x.split(','))}\n",
-    "vocab_xr = [k for k, v in vocab_x.items()]  # dictionary for reverse lookup\n",
+    "words_x = '<PAD>,1,2,3,4,5,6,7,8,9,0,<SOS>,<EOS>,+'  # Define all possible tokens for input, including digits, special tokens, and '+'\n",
+    "vocab_x = {word: i for i, word in enumerate(words_x.split(','))}  # Map each token to a unique integer index\n",
+    "vocab_xr = [k for k, v in vocab_x.items()]  # Create a list for reverse lookup: index to token\n",
     "\n",
     "# vocabulary for output sequence\n",
-    "words_y = '<PAD>,1,2,3,4,5,6,7,8,9,0,<SOS>,<EOS>'\n",
-    "vocab_y = {word: i for i, word in enumerate(words_y.split(','))}\n",
-    "vocab_yr = [k for k, v in vocab_y.items()]  # dictionary for reverse lookup\n",
-    "\n",
+    "words_y = '<PAD>,1,2,3,4,5,6,7,8,9,0,<SOS>,<EOS>'  # Define all possible tokens for output, no '+' needed\n",
+    "vocab_y = {word: i for i, word in enumerate(words_y.split(','))}  # Map each output token to a unique integer index\n",
+    "vocab_yr = [k for k, v in vocab_y.items()]  # Create a list for reverse lookup: index to token\n",
     "\n",
     "def get_data():\n",
-    "    words = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
-    "    p = np.array([7, 5, 5, 7, 6, 5, 7, 6, 5, 7])\n",
-    "    p = p / p.sum()\n",
+    "    words = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']  # Digits used for number generation\n",
+    "    p = np.array([7, 5, 5, 7, 6, 5, 7, 6, 5, 7])  # Probabilities for each digit (to bias sampling)\n",
+    "    p = p / p.sum()  # Normalize probabilities to sum to 1\n",
     "\n",
     "    # randomly sample n1 words as the first addition number\n",
-    "    n1 = random.randint(10, 20)\n",
-    "    s1 = np.random.choice(words, size=n1, replace=True, p=p)\n",
-    "    s1 = s1.tolist()\n",
+    "    n1 = random.randint(10, 20)  # Random length for the first number (10-20 digits)\n",
+    "    s1 = np.random.choice(words, size=n1, replace=True, p=p)  # Sample digits for the first number\n",
+    "    s1 = s1.tolist()  # Convert numpy array to list\n",
     "\n",
     "    # randomly sample n2 words as the second addition number\n",
-    "    n2 = random.randint(10, 20)\n",
-    "    s2 = np.random.choice(words, size=n2, replace=True, p=p)\n",
-    "    s2 = s2.tolist()\n",
+    "    n2 = random.randint(10, 20)  # Random length for the second number (10-20 digits)\n",
+    "    s2 = np.random.choice(words, size=n2, replace=True, p=p)  # Sample digits for the second number\n",
+    "    s2 = s2.tolist()  # Convert numpy array to list\n",
     "\n",
     "    # the input sequence\n",
-    "    x = s1 + ['+'] + s2\n",
-    "    \n",
+    "    x = s1 + ['+'] + s2  # Concatenate first number, '+', and second number\n",
+    "\n",
     "    # the ground truth output sequence\n",
-    "    y = int(''.join(s1)) + int(''.join(s2))\n",
-    "    y = list(str(y))\n",
-    "    \n",
+    "    y = int(''.join(s1)) + int(''.join(s2))  # Compute the sum as an integer\n",
+    "    y = list(str(y))  # Convert the sum to a list of digit characters\n",
+    "\n",
     "    # add start of sentence (SOS) and end of sentence (EOS)\n",
-    "    x = ['<SOS>'] + x + ['<EOS>']\n",
-    "    y = ['<SOS>'] + y + ['<EOS>']\n",
+    "    x = ['<SOS>'] + x + ['<EOS>']  # Add <SOS> and <EOS> to input\n",
+    "    y = ['<SOS>'] + y + ['<EOS>']  # Add <SOS> and <EOS> to output\n",
     "\n",
     "    # use <PAD> to ensure fixed sequence length\n",
-    "    x = x + ['<PAD>'] * 50\n",
-    "    y = y + ['<PAD>'] * 51\n",
-    "    x = x[:50]\n",
-    "    y = y[:51]\n",
+    "    x = x + ['<PAD>'] * 50  # Pad input to at least 50 tokens\n",
+    "    y = y + ['<PAD>'] * 51  # Pad output to at least 51 tokens\n",
+    "    x = x[:50]  # Truncate input to exactly 50 tokens\n",
+    "    y = y[:51]  # Truncate output to exactly 51 tokens\n",
     "\n",
     "    # tokenization: transform words into id\n",
-    "    token_x = [vocab_x[i] for i in x]\n",
-    "    token_y = [vocab_y[i] for i in y]\n",
+    "    token_x = [vocab_x[i] for i in x]  # Convert input tokens to indices\n",
+    "    token_y = [vocab_y[i] for i in y]  # Convert output tokens to indices\n",
     "\n",
     "    # convert to tensor\n",
-    "    tensor_x = torch.LongTensor(token_x)\n",
-    "    tensor_y = torch.LongTensor(token_y)\n",
-    "    return tensor_x, tensor_y\n",
-    "\n",
+    "    tensor_x = torch.LongTensor(token_x)  # Convert input indices to tensor\n",
+    "    tensor_y = torch.LongTensor(token_y)  # Convert output indices to tensor\n",
+    "    return tensor_x, tensor_y  # Return input and output tensors\n",
     "\n",
     "class TwoSumDataset(Dataset):\n",
     "    def __init__(self, size=100000):\n",
-    "        super(Dataset, self).__init__()\n",
-    "        self.size = size\n",
+    "        super(Dataset, self).__init__()  # Initialize parent Dataset class\n",
+    "        self.size = size  # Store dataset size\n",
     "\n",
     "    def __len__(self):\n",
-    "        return self.size\n",
+    "        return self.size  # Return dataset size\n",
     "\n",
     "    def __getitem__(self, i):\n",
-    "        return get_data()\n",
+    "        return get_data()  # Generate a new (input, output) pair each time\n",
     "\n",
-    "\n",
-    "ds_train = TwoSumDataset(size=100000)\n",
-    "ds_val = TwoSumDataset(size=10000)\n",
-    "dl_train = DataLoader(dataset=ds_train, batch_size=200, drop_last=True, shuffle=True)\n",
-    "dl_val = DataLoader(dataset=ds_val, batch_size=200, drop_last=True, shuffle=False)"
+    "ds_train = TwoSumDataset(size=100000)  # Training dataset with 100,000 samples\n",
+    "ds_val = TwoSumDataset(size=10000)     # Validation dataset with 10,000 samples\n",
+    "dl_train = DataLoader(dataset=ds_train, batch_size=200, drop_last=True, shuffle=True)  # Training DataLoader\n",
+    "dl_val = DataLoader(dataset=ds_val, batch_size=200, drop_last=True, shuffle=False)     # Validation"
    ]
   },
   {
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-18T08:59:05.235334Z",
@@ -322,10 +320,31 @@
    "outputs": [],
    "source": [
     "KerasModel.StepRunner = StepRunner\n",
+    "# Assigns the custom StepRunner class to KerasModel, customizing how each training step is executed.\n",
+    "\n",
     "net = Transformer.from_config(src_vocab=len(vocab_x), tgt_vocab=len(vocab_y), N=5, d_model=64, d_ff=128, h=8, dropout=0.1)\n",
+    "# Initializes a Transformer model with:\n",
+    "# - src_vocab: input vocabulary size (number of unique input tokens)\n",
+    "# - tgt_vocab: output vocabulary size (number of unique output tokens)\n",
+    "# - N: number of encoder/decoder layers (5)\n",
+    "# - d_model: model embedding dimension (64)\n",
+    "# - d_ff: feed-forward network dimension (128)\n",
+    "# - h: number of attention heads (8)\n",
+    "# - dropout: dropout rate (0.1)\n",
+    "\n",
     "loss_fn = LabelSmoothingLoss(size=len(vocab_y), padding_idx=0, smoothing=0.1)\n",
-    "metrics_dict = {'acc': Accuracy(task='multiclass', num_classes=len(vocab_y))} \n",
-    "optimizer = NoamOpt(net.parameters(), model_size=64)"
+    "# Creates a label smoothing loss function for classification, with:\n",
+    "# - size: number of output classes (output vocab size)\n",
+    "# - padding_idx: index for the padding token (0)\n",
+    "# - smoothing: smoothing factor (0.1) to prevent overconfidence\n",
+    "\n",
+    "metrics_dict = {'acc': Accuracy(task='multiclass', num_classes=len(vocab_y))}\n",
+    "# Defines a metrics dictionary with accuracy as the metric,\n",
+    "# specifying multiclass classification and the number of classes.\n",
+    "\n",
+    "optimizer = NoamOpt(net.parameters(), model_size=64)\n",
+    "# Sets up the Noam optimizer (learning rate scheduler) for the model parameters,\n",
+    "# with model_size=64 (matches d_model), as used in the original"
    ]
   },
   {
@@ -344,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-18T08:59:10.201118Z",
@@ -473,12 +492,26 @@
     }
    ],
    "source": [
-    "model = KerasModel(net, loss_fn=loss_fn, metrics_dict=metrics_dict, optimizer=optimizer)\n",
+    "# Create a KerasModel instance for training and evaluation.\n",
+    "model = KerasModel(\n",
+    "    net,                    # The neural network model to train (Transformer instance).\n",
+    "    loss_fn=loss_fn,        # The loss function to optimize (LabelSmoothingLoss).\n",
+    "    metrics_dict=metrics_dict,  # Dictionary of metrics to compute (e.g., accuracy).\n",
+    "    optimizer=optimizer     # Optimizer for updating model parameters (NoamOpt).\n",
+    ")\n",
+    "\n",
+    "# Start the training process for the model.\n",
     "model.fit(\n",
-    "    train_data=dl_train, val_data=dl_val,\n",
-    "    epochs=1, ckpt_path='checkpoint', patience=10,  # if you wish to train from scratch, change epochs to 100 and try it later\n",
-    "    monitor='val_acc', mode='max',\n",
-    "    callbacks=None, plot=True\n",
+    "    train_data=dl_train,    # DataLoader for training data.\n",
+    "    val_data=dl_val,        # DataLoader for validation data.\n",
+    "    epochs=1,               # Number of training epochs (set to 1 for demonstration).\n",
+    "    ckpt_path='checkpoint', # Directory to save model checkpoints.\n",
+    "    patience=10,            # Early stopping patience (stop if no improvement after 10 epochs).\n",
+    "    # if you wish to train from scratch, change epochs to 100 and try it later\n",
+    "    monitor='val_acc',      # Metric to monitor for early stopping and checkpointing ('val_acc' = validation accuracy).\n",
+    "    mode='max',             # Direction for monitoring metric ('max' means higher is better).\n",
+    "    callbacks=None,         # No additional callbacks are used.\n",
+    "    plot=True               # Plot training/validation curves during training.\n",
     ")"
    ]
   },
@@ -491,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-18T09:00:09.401985Z",
@@ -519,23 +552,48 @@
     }
    ],
    "source": [
+    "# Load pretrained model weights from the specified checkpoint file.\n",
     "model.load_ckpt(\"/kaggle/input/sum-ckpt/pytorch/default/1/sum-ckpt.pth\")\n",
+    "\n",
+    "# Get the neural network (Transformer) from the KerasModel wrapper.\n",
     "net = model.net\n",
+    "\n",
+    "# Set the model to evaluation mode (disables dropout, etc.).\n",
     "net.eval()\n",
     "\n",
+    "# Define a helper function to move a tensor or model to the correct device (CPU/GPU).\n",
     "def prepare(x, accelerator=model.accelerator):\n",
     "    return x.to(accelerator.device)\n",
     "\n",
+    "# Move the model to the appropriate device.\n",
     "net = prepare(net)\n",
+    "\n",
+    "# Generate a random (input, output) pair for the summation task.\n",
     "src, tgt = get_data()\n",
+    "\n",
+    "# Move the input and output tensors to the correct device.\n",
     "src, tgt = prepare(src), prepare(tgt)\n",
+    "\n",
+    "# Create a MaskedBatch object for the model (adds batch dimension).\n",
     "mbatch = MaskedBatch(src=src.unsqueeze(dim=0), tgt=tgt.unsqueeze(dim=0))\n",
     "\n",
+    "# Use greedy decoding to generate the model's prediction for the input sequence.\n",
+    "# - net: the Transformer model\n",
+    "# - mbatch.src: input tensor (batch size 1)\n",
+    "# - mbatch.src_mask: attention mask for the input\n",
+    "# - 50: maximum output sequence length\n",
+    "# - vocab_y[\"<SOS>\"]: start-of-sequence token index for output\n",
     "y_pred = greedy_decode(net, mbatch.src, mbatch.src_mask, 50, vocab_y[\"<SOS>\"])\n",
+    "\n",
+    "# Print the input sequence as tokens.\n",
     "print(\"input:\")\n",
     "print(get_words(mbatch.src[0], vocab_xr),'\\n')\n",
+    "\n",
+    "# Print the ground truth output sequence as tokens.\n",
     "print(\"ground truth:\")\n",
     "print(get_words(mbatch.tgt[0], vocab_yr),'\\n')\n",
+    "\n",
+    "# Print the model's predicted output sequence as tokens.\n",
     "print(\"prediction:\")\n",
     "print(get_words(y_pred[0], vocab_yr))"
    ]
@@ -571,9 +629,11 @@
    },
    "outputs": [],
    "source": [
-    "sys.path.append(\"/kaggle/input/scmulan\")\n",
-    "import scMulan\n",
+    "import sys\n",
     "import scanpy as sc\n",
+    "\n",
+    "# If scMulan is installed as a package, just import it\n",
+    "import scMulan\n",
     "from scMulan import GeneSymbolUniform"
    ]
   },
