--- a/AI Large Cellular Models/hands-on-1.ipynb
+++ b/AI Large Cellular Models/hands-on-1.ipynb
@@ -720,8 +720,8 @@
     "# put it under .ckpt/ckpt_scMulan.pt\n",
     "# by: wget https://cloud.tsinghua.edu.cn/f/2250c5df51034b2e9a85/?dl=1  -O ckpt/ckpt_scMulan.pt\n",
     "\n",
-    "ckp_path = '/kaggle/input/scmulan-ckpt/pytorch/default/1/ckpt_scMulan.pth'\n",
-    "meta_info_path = '/kaggle/input/scmulan/scMulan/utils/meta_info.pt'"
+    "ckp_path = '/ckpt/ckpt_scMulan.pt'\n",
+    "# meta_info_path = '/kaggle/input/scmulan/scMulan/utils/meta_info.pt'"
    ]
   },
   {
